// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-cMOycp cpoNsI"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-yGKTs enWIIi"
    disabled={false}
    size="sm"
  >
    <input
      checked={true}
      className="sc-sQjNv cMpzOu"
      id="test-switch-1"
      onChange={[Function]}
      size="sm"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dloDHE fIfuNH"
      size="sm"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs dRNhSw"
      disabled={false}
      size="md"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="button-switch-1"
        onChange={[Function]}
        size="md"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE kifiDE"
        size="md"
      >
        <span
          className="sc-kLOYGq iQvQfY"
        >
          <p
            className="sc-eEXVIU djWSin"
          >
            Off
          </p>
          <p
            className="sc-eEXVIU djWSin"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs wUHpr"
      disabled={false}
      size="lg"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="button-switch-2"
        onChange={[Function]}
        size="lg"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE kifiDE"
        size="lg"
      >
        <span
          className="sc-kLOYGq iQvQfY"
        >
          <p
            className="sc-eEXVIU djWSin"
          >
            Off
          </p>
          <p
            className="sc-eEXVIU djWSin"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders Disabled state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs kTOiXU"
      disabled={true}
      size="sm"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE fIfuNH"
        size="sm"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs kTOiXU"
      disabled={true}
      size="sm"
    >
      <input
        checked={false}
        className="sc-sQjNv cMpzOu"
        id="test-switch-disabled"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-dloDHE bUZrjP"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs dTSkmo"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-sQjNv jMssVf"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE eogLCJ"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs eFKEdn"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-sQjNv liUDGr"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE gjFiuc"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs enWIIi"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-sQjNv liUDGr"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE gjFiuc"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs dTSkmo"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-sQjNv cnevae"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE fhsNeC"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs eFKEdn"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE fIfuNH"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-cMOycp cpoNsI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-yGKTs enWIIi"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-sQjNv cMpzOu"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-dloDHE fIfuNH"
        size="sm"
      />
    </label>
  </div>
</div>
`;
